# cg22-project-1-server

./: .gitignore  CMakeLists.txt  README.md  api.md
configs/: static_config.yaml.in
include/core/: body.h  bytes.h  color_space.h  header.h  pixel.h  pnm.h  pnm_type.h
include/dithering/: atkinson.h  floyd_steinberg.h  ordered.h  random.h  type.h
include/entities/: canvas.h  line.h  point.h
include/gamma/: gamma.h
include/handlers/: convert.h  dithering.h  draw_line.h  gamma.h  gradient.h  histogram.h  jpeg.h  scaling.h  storage_component.h  upload.h  validate.h
include/histogram/: histogram.h
include/jpeg/: haffman.h  idct.h  jpeg.h
include/scaling/: bc_splines.h  bi_linear.h  lanczos.h  nearest_neighbor.h  shifting.h  type.h
include/utils/: file.h  useful.h
src/: main.cpp
src/api/: upload.cpp  upload.h
src/core/: body.cpp  body.h  color_space.h  header.cpp  header.h  pixel.cpp  pixel.h  pnm.cpp  pnm.h  pnm_type.h
src/dithering/: atkinson.cpp  floyd_steinberg.cpp  ordered.cpp  random.cpp
src/entities/: canvas.cpp  line.cpp  point.cpp
src/filters/: matrix_based_filters.cpp
src/gamma/: gamma.cpp
src/handlers/: convert.cpp  dithering.cpp  draw_line.cpp  gamma.cpp  gradient.cpp  hello.cpp  histogram.cpp  jpeg.cpp  scaling.cpp  storage_component.cpp  upload.cpp  validate.cpp
src/histogram/: histogram.cpp
src/jpeg/: haffman.cpp  idct.cpp  jpeg.cpp
src/scaling/: bc_splines.cpp  bi_linear.cpp  lanczos.cpp  nearest_neighbor.cpp  shifting.cpp
src/utils/: file.cpp  file.h
tests/: test_basic.py  test_convert.py
unittests/: canvas_test.cpp  conversion_test.cpp  default_vars.h  dithering_test.cpp  jpeg_test.cpp  pnm_test.cpp  scaling_test.cpp  shifting_test.cpp  utils_test.cpp
